# Fixpoint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  definitions.hpp  fix32.hpp  fix64.hpp  fixmath.hpp  test.cpp
documentation/: fix32.html  index.html  prism.css  sidebar.html  styles.css
test/: test_fix32.cpp  test_fix64.cpp  test_fixmath.cpp
